--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -279,7 +279,7 @@ display: none;
     margin-left: 0;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 5px;
+    padding-bottom: 2px;
 }
 
   .additional-goods__green-background {
@@ -288,7 +288,7 @@ display: none;
     margin-top: 0;
   }
   .additional-goods__header {
-    margin-bottom: 44px;
+    margin-bottom: 47px;
   }
   .additional-goods__article-main-text {
     padding-top: 0;
@@ -326,61 +326,121 @@ display: none;
     margin-left: 114px;
     margin-top: 9px;
 }
+
 .additional-goods__article-order {
   max-width: 243px;
-  margin-left: 13px;
+  margin-left: 120px;
   padding-right: 119px;
-  padding-top: 10px;
+  padding-top: 8px;
   padding-bottom: 8px;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 13px;
   margin-top: 15px;
-  padding-left: 93px;
+  padding-left: 91px;
 }
+
 .additional-goods__green-background {
   width: 245px;
   max-width: 245px;
   margin-top: 0;
   margin-left: 80px;
 }
+
 .additional-goods__green-background svg {
   margin-left: 3px;
   margin-top: -1px;
   margin-bottom: 53px;
 }
+
 .additional-goods__green-background-text {
   margin-left: 0;
   text-align: center;
   font-size: 16px;
   line-height: 20px;
 }
+
 .additional-goods__article-five-litres {
   margin-left: 34px;
   margin-right: 0;
 }
+
 .additional-goods__article-fifty-rubles {
   margin-left: 180px;
 }
+
 .additional-goods__article-how-many-weigh-one-litres {
   margin-left: 95px;
 }
+
 .additional-goods__article-how-many-weight-milk {
   margin-left: 196px;
 }
+
 .additional-goods__article-thirty-grammes {
   margin-left: 73px;
 }
+
 .additional-goods__article-three-hundred-rubles {
   margin-left: 121px;
 }
+
 .additional-goods__green-background {
   flex-direction: column;
   padding-bottom: 0;
 }
+
 .additional-goods {
 max-width: 1220px;
 margin: 0 auto;
 }
+
+.additional-goods__header-sub-span {
+  margin-left: 0px;
+  position: relative;
+  font-size: 36px;
+  line-height: 36px;
+  margin-top: 2px;
 }
+
+.additional-goods__header {
+margin-top: 42px;
+}
+
+.additional-goods_header-line-tablet-show {
+  display: block;
+  width: 70px;
+  position: absolute;
+  top: 39px;
+  left: -107px;
+}
+
+.additional-goods_header-right-line {
+  position: absolute;
+  top: 39px;
+  right: -110px;
+  width: 958px;
+}
+
+.additional-goods__content {
+flex-direction: row;
+max-width: 1220px;
+}
+
+.additional-goods__article-main-div {
+  display: flex;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
