--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -108,16 +108,28 @@
     z-index: 1000;
     max-width: 570px;
     left: 10;
-    left: 17%;
-    padding-bottom: 57px;
-    top: 1960px;
+    left: 110px;
+    top: 95px;
 }
+
+  .communicating__index {
+    padding-top: 26px;
+    padding-bottom: 59px;
+    position: absolute;
+    max-width: 570px;
+    background-color: #fff;
+    top: 96px;
+    left: 110px;
+    padding-right: 3px;
+    margin-top: 0px;
+}
+
 
 .communicating__offer-communicating {
   margin-top: 38px;
   font-size: 20px;
   line-height: 25px;
-  margin-left: 80px;
+  margin-left: 75px;
   max-width: 190px;
 }
 
