--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -96,7 +96,9 @@
   .find-all-goods {
     max-width: 243px;
     margin-right: 0;
+    padding-bottom: 6px;
   }
+
   .find-all-goods__show-all-goods {
     max-width: 169px;
     margin-top: 64px;
@@ -106,6 +108,29 @@
     line-height: 20px;
 }
 
+.find-all-goods__plus-mobile-img {
+  margin-top: 13px;
+  margin-bottom: 48px;
 }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
