--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -206,17 +206,17 @@ display: none;
     width: 552px;
     height: 503px;
     position: absolute;
-    right: 226px;
+    right: 219px;
     top: 10px;
 }
   .header-background::after {
     content: "";
     display: block;
     width: 721px;
-    height: 659px;
+    height: 663px;
     position: absolute;
-    top: -15%;
-    right: -101px;
+    top: -16%;
+    right: -110px;
     margin-left: auto;
     background-color: #65a93c;
     background-image: url(../img/index-background-mobile.png);
@@ -237,18 +237,22 @@ display: none;
   position: relative;
 }
 .header-background__main-words{
-  margin-left: 74px;
+  margin-left: 79px;
   margin-bottom: 0px;
+  margin-top: 14px;
 }
 .header-background__work-for-your-cat {
   margin-bottom: 6px;
-  margin-left: 73px;
+  margin-left: 80px;
+}
+.menu-main__sub-menu-elem {
+  padding-top: 15px;
 }
 .check-your-program {
   margin-bottom: 507px;
   margin-top: 47px;
   max-width: 246px;
-  margin-left: 73px;
+  margin-left: 78px;
   font-size: 20px;
   line-height: 20px;
   padding: 14px 28px 18px 26px;
