--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -383,6 +383,7 @@
   .live-example {
     max-width: 1440px;
     border-top: 0;
+    padding-bottom: 0;
   }
   .live-example-content {
     max-width: 1220px;
@@ -394,7 +395,7 @@
     margin-bottom: 74px;
     margin-left: 0;
     display: flex;
-    margin-left: 104px;
+    margin-left: 109px;
 }
 .live-example__main-content {
   display: flex;
@@ -420,13 +421,13 @@
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 53px;
-  margin-left: 111px;
+  margin-left: 78px;
   max-width: 432px;
   margin-top: 73px;
 }
 .live-example__numbers-plus-price {
     margin-top: 15px;
-    margin-left: 111px;
+    margin-left: 79px;
 }
 .live-example__numbers-sub:first-child {
   padding-top: 5px;
@@ -462,7 +463,7 @@
   justify-content: space-between;
   display: flex;
   flex-direction: row;
-  margin-top: 28px;
+  margin-top: 26px;
   padding-left:0;
 }
 .live-example__how-many-u-spent {
@@ -481,8 +482,8 @@
 .live-example__slider-slide-show-tablet {
   display: block;
   position: absolute;
-  top: -187px;
-  left: 53px;
+  top: -186px;
+  left: 26px;
   width: 624px;
   height: 517px;
 }
@@ -506,8 +507,18 @@
 .live-example__slider-controls {
   max-width: 569px;
   margin-top: 332px;
-  margin-left: 126px;
+  margin-left: 103px;
   margin-bottom: 48px;
+}
+.live-example__slider-button {
+  padding-bottom: 7px;
+  border-bottom: 1px dotted #bebebe;
+}
+.live-example__how-many-u-spent {
+  margin-left: 0px;
+}
+.live-example__slider {
+  padding-bottom: 18px;
 }
 }
 
