--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -149,13 +149,19 @@
 }
 
 @media (min-width:@desktop) {
-  .menu-main {
-    margin-right: 7px;
-  }
-  .page-header {
-    max-width: 1220px;
-    margin: 0 auto;
-  }
+  .page-header__menu-logos-links {
+    margin-right: 86px;
+    margin-left: 0px;
+    margin-top: 7px;
+    max-width: 202px;
+}
+.menu-main {
+  margin-top: 7px;
+}
+.page-header {
+  max-width: 1220px;
+  margin: 0 auto;
+}
   .page-header__logo-site-image-mobile{
     display: none;
   }
