Помогите с каталог десктоп

--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -107,9 +107,12 @@
     position: absolute;
     z-index: 1000;
     max-width: 570px;
-    left: 10;
     left: 110px;
-    top: 95px;
+    top: 23px;
+}
+
+.communicating-catalog-block {
+  padding-bottom: 54px;
 }
 
   .communicating__index {
@@ -126,11 +129,12 @@
 
 
 .communicating__offer-communicating {
-  margin-top: 38px;
+  margin-top: 35px;
   font-size: 20px;
   line-height: 25px;
   margin-left: 75px;
   max-width: 190px;
+  margin-right: 61px;
 }
 
 .communicating__address {
@@ -143,7 +147,11 @@
   text-align: right;
   margin-left: 0px;
   display: flex;
-
+}
+.communicating__address-catalog {
+  text-align: left;
+    margin-right: 56px;
+    margin-top: 34px;
 }
 
 }
