--- a/source/less/main-form.less
+++ b/source/less/main-form.less
@@ -858,8 +858,8 @@ left: 12px;
   }
 
   .main-form__how-u-can-choose-program {
-    margin-top: 62px;
-    margin-left: 0px;
+    margin-top: 57px;
+    margin-left: 1px;
   }
 
 .main-form__full-anket {
@@ -869,6 +869,7 @@ left: 12px;
 .main-form__contact-inputs-radio-main {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 .main-form__radio-part {
 margin-top: 0;
@@ -880,7 +881,7 @@ margin-top: 0;
   margin-left: 0;
 }
 .form__sub-label-input-name {
-  padding: 10px 307px 10px 19px;
+  padding: 10px 307px 10px 17px;
 }
 .form__first-three-inputs:nth-child(1n) {
   margin-top: 27.5px;
@@ -889,22 +890,24 @@ margin-top: 0;
   padding-right: 275px;
 }
 .form__sub-label-weight {
-  margin-top: -6px;
-  margin-left: 1px;
+  margin-top: -8px;
+  margin-left: 0px;
+  margin-right: 17px;
 }
 .form__sub-input-age {
-  padding-right: 237px;
+  padding-right: 244px;
+  padding-bottom: 12px;
 }
 .main-form__radio-part {
   width: 43.8%;
   margin-top: 27px;
-  padding-bottom: 1px;
+  padding-bottom: 33px;
 }
 .form__sub-label-input-radio {
   margin-top: 13px;
 }
 .form__contact {
-  margin-top: 55px;
+  margin-top: 67px;
     position: relative;
     margin-bottom: 77px;
     padding-left: 0;
@@ -913,6 +916,12 @@ margin-top: 0;
 }
 .form__contact-data-for-cat-owner {
   margin-left: 0;
+}
+.form__first-three-inputs-last-child {
+  margin-top: -11px;
+  margin-right: 16px;
+  font-size: 20px;
+  line-height: 20px;
 }
 .form__contact-data-for-cat-owner-left-line {
   display: block;
@@ -932,6 +941,13 @@ margin-top: 0;
   right: -111px;
   top: 8px;
 }
+.form__sub-input-radio:checked + .form__sub-label-input-radio::before {
+  left: 23px;
+}
+.form__first-three-inputs {
+margin-bottom: 1px;
+}
+
 .form__contact-data-cat-owner-email {
   margin-left: 0;
   width: 46.72%;
@@ -939,6 +955,13 @@ margin-top: 0;
 .form__sub-label-email {
   margin-left: 1px;
   margin-top: 15px;
+}
+.form__sub-label-input-radio::after {
+width: 40px;
+height: 40px;
+}
+.form__sub-label-input-radio {
+  margin-left: 70px;
 }
 .form__sub-input-text-email {
   padding: 7px 159px 11px 20px;
@@ -1115,11 +1138,12 @@ margin-top: 0;
 }
 .communicating-form-transformed {
   margin: 0 auto;
-  margin-top: 52px;
+  margin-top: 72px;
   max-width: 570px;
   margin-left: 0px;
   position: absolute;
-  top: 1605px;
+  top: 23px;
+  padding-bottom: 55px;
 }
 
 .communicating__we-offer-form {
@@ -1129,6 +1153,12 @@ margin-top: 0;
 .communicating__address-form {
   margin-right: 59px;
 }
-
+.main-form__contact-inputs {
+  margin-left: 3px;
+  margin-top: 0px;
+}
+.map__iframe-form {
+  height: 400px;
+}
 }
 
