--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -189,6 +189,10 @@
     padding-top: 45px;
   }
 
+  .footer-catalog {
+    padding-top: 41px;
+  }
+
   .footer__footer-content {
     max-width: 1220px;
     width: 1220px;
