--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -279,7 +279,7 @@ display: none;
     margin-left: 0;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 2px;
+    padding-bottom: 4px;
 }
 
   .additional-goods__green-background {
@@ -297,7 +297,6 @@ display: none;
     padding-left: 0;
   }
   .additional-goods__article-header {
-    margin-right: 162px;
     margin-top: 12px;
   }
   .additional-goods__article-content {
@@ -312,32 +311,34 @@ display: none;
     margin-top: 0;
     margin-left: 0;
     padding-left: 0;
+    display: inline-flex;
 }
 
 .additional-goods__article-how-many-weight {
-  margin-top: 9px;
-  margin-right: 0;
+  margin-top: 13px;
+  margin-left: 162px;
+  width: 146px;
 }
 
 .additional-goods__article-how-many-price {
-  margin-right: 0;
-    margin-left: 113px;
-    margin-top: 10px;
-    margin-left: 114px;
-    margin-top: 9px;
+  margin-left: 27px;
+  margin-left: 98px;
+  margin-top: 10px;
+  margin-top: 12px;
+  width: 44px;
 }
 
 .additional-goods__article-order {
   max-width: 243px;
-  margin-left: 120px;
+  margin-left: 37px;
   padding-right: 119px;
-  padding-top: 8px;
+  padding-top: 10px;
   padding-bottom: 8px;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 13px;
-  margin-top: 15px;
-  padding-left: 91px;
+  margin-top: 16px;
+  padding-left: 93px;
 }
 
 .additional-goods__green-background {
@@ -361,33 +362,36 @@ display: none;
 }
 
 .additional-goods__article-five-litres {
-  margin-left: 34px;
+  margin-left: 194px;
   margin-right: 0;
 }
 
 .additional-goods__article-fifty-rubles {
-  margin-left: 180px;
+  margin-left: 98px;
 }
 
 .additional-goods__article-how-many-weigh-one-litres {
-  margin-left: 95px;
+  margin-left: 256px;
 }
 
 .additional-goods__article-how-many-weight-milk {
-  margin-left: 196px;
+  margin-left: 98px;
 }
 
 .additional-goods__article-thirty-grammes {
-  margin-left: 73px;
+  margin-left: 234px;
 }
 
 .additional-goods__article-three-hundred-rubles {
-  margin-left: 121px;
+  margin-left: 99px;
 }
 
 .additional-goods__green-background {
   flex-direction: column;
   padding-bottom: 0;
+  display: flex;
+  padding-left: 41px;
+  padding-right: 41px;
 }
 
 .additional-goods {
