--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,16 +1,21 @@
 @font-face {
-  font-family: "Oswald-Medium"; /* Имя шрифта */
+  font-family: "Oswald-Medium";
+  /* Имя шрифта */
   src: url("../fonts/oswaldmedium.woff")/* Путь к файлу со шрифтом */
 }
 
 @font-face {
-  font-family: "Oswald-Regular"; /* Имя шрифта */
-  src: url("../fonts/oswaldregular.woff");/* Путь к файлу со шрифтом */
+  font-family: "Oswald-Regular";
+  /* Имя шрифта */
+  src: url("../fonts/oswaldregular.woff");
+  /* Путь к файлу со шрифтом */
 }
 
 @font-face {
-  font-family: "Arial-Regular"; /* Имя шрифта */
-  src: url("../fonts/arialregular.ttf");/* Путь к файлу со шрифтом */
+  font-family: "Arial-Regular";
+  /* Имя шрифта */
+  src: url("../fonts/arialregular.ttf");
+  /* Путь к файлу со шрифтом */
 }
 
 * {
@@ -52,140 +57,155 @@
   margin: 0 auto;
 }
 
-@media(min-width:@mobile) {
-  .page-header__logo-site-image-mobile{
+@media (min-width: @mobile) {
+  .page-header__logo-site-image-mobile {
     display: block;
   }
+
   .page-header__logo-site-image-tablet {
     display: none;
   }
+
   .page-header__logo-site-image-desktop {
     display: none;
   }
+
   .page-header__menu-logos-links {
-    background-color: #fff;
+    background-color: #ffffff;
     padding-top: 11px;
     padding-bottom: 17px;
     display: flex;
     align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
     max-width: 280px;
     margin: 0 auto;
-}
+  }
+
   .page-header__logo-mobile-page {
     margin-top: 13px;
     margin-left: -7px;
-}
-.page-header__logo-mobile_menu {
-  margin-top: 8px;
-}
-.menu-main__sub-menu-elem {
-  border-top: 1px solid #e6e6e6;
-  list-style-type: none;
-  padding-top: 22px;
-  padding-bottom: 20px;
+  }
+
+  .page-header__logo-mobile_menu {
+    margin-top: 8px;
+  }
+
+  .menu-main__sub-menu-elem {
+    border-top: 1px solid #e6e6e6;
+    list-style-type: none;
+    padding-top: 22px;
+    padding-bottom: 20px;
+  }
 }
 
-}
-
-@media(min-width:@tablet) {
-
+@media (min-width: @tablet) {
   .page-header {
     max-width: 708px;
     margin: 0 auto;
   }
-  .page-header__logo-site-image-mobile{
+
+  .page-header__logo-site-image-mobile {
     display: none;
   }
+
   .page-header__logo-site-image-tablet {
     display: block;
   }
+
   .page-header__logo-site-image-desktop {
     display: none;
   }
+
   .page-header__logo-mobile-page {
     display: none;
   }
+
   .page-header__logo-mobile_menu {
     display: none;
   }
+
   .page-header__menu {
     display: flex;
     align-items: center;
   }
+
   .menu-main__sub {
     display: flex;
-
   }
-  .menu-main__sub-menu-elem{
+
+  .menu-main__sub-menu-elem {
     border: 0;
     margin-right: 34px;
+    padding-top: 18px;
   }
-  .menu-main__sub-menu-elem:last-child {
-    border: 0;
-  }
+
   .menu-main__sub-menu-elem-link {
     font-weight: normal;
-    font-family: "Oswald-Regular";
+    font-family: "Oswald-Regular", sans-serif;
     font-size: 18px;
     line-height: 24.86px;
   }
+
   .page-header__menu-logos-links {
     margin-right: 86px;
     margin-left: -7px;
-}
+  }
+
   .menu-main__sub-menu-elem:last-child {
     margin-right: 0;
+    border: 0;
   }
+
   .menu-main__sub-menu-elem-link-active {
     border-bottom: 1px solid #68b738;
     padding-bottom: 6px;
   }
-  .menu-main__sub-menu-elem {
-    padding-top: 18px;
-  }
 }
 
-@media (min-width:@desktop) {
+@media (min-width: @desktop) {
   .page-header__menu-logos-links {
     margin-right: 86px;
-    margin-left: 0px;
+    margin-left: 0;
     margin-top: 7px;
     max-width: 202px;
-}
-.menu-main {
-  margin-top: 7px;
-}
-.page-header {
-  max-width: 1220px;
-  margin: 0 auto;
-}
-  .page-header__logo-site-image-mobile{
+    padding-left: 0;
+  }
+
+  .menu-main {
+    margin-top: 7px;
+  }
+
+  .page-header {
+    max-width: 1220px;
+    margin: 0 auto;
+  }
+
+  .page-header__logo-site-image-mobile {
     display: none;
   }
+
   .page-header__logo-site-image-tablet {
     display: none;
   }
+
   .page-header__logo-site-image-desktop {
     display: block;
   }
+
   .menu-main__sub-menu-elem-link {
     font-size: 20px;
     line-height: 24.86px;
-}
-.page-header__menu {
-  justify-content: space-between;
-}
-.page-header__menu-logos-links {
-  padding-left: 0;
-}
-.menu-main__sub-menu-elem {
-  margin-right: 33px;
-}
-.menu-main__sub-menu-elem-link-index {
-  color: #fff;
-}
-}
+  }
 
+  .page-header__menu {
+    justify-content: space-between;
+  }
+
+  .menu-main__sub-menu-elem {
+    margin-right: 33px;
+  }
+
+  .menu-main__sub-menu-elem-link-index {
+    color: #ffffff;
+  }
+}
