--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -2,6 +2,8 @@
 @mobile: 320px;
 @tablet: 768px;
 @desktop:1220px;
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
 @font-face {
   font-family: 'fontello';
   src: url('../font/fontello.eot?11710255');
@@ -63,20 +65,7 @@
 
 
 
-.header-background::after {
-content: "";
-display: block;
-width: 100%;
-height: 305px;
-position: absolute;
-top: 0;
-left: 0;
-background-color: rgb(101, 169, 60);
-background-image: url("../img/index-background-mobile.png");
-z-index: -1;
-background-position: 50% center;
-background-repeat: no-repeat;
-}
+
 
 .header-background__work-for-your-cat {
   font-size: 14px;
@@ -99,6 +88,24 @@ background-repeat: no-repeat;
       left: 20px;
       display: block;
   }
+  .header-background::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 305px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(101, 169, 60);
+    background-image: url("../img/index-background-mobile.png");
+    z-index: -1;
+    background-position: 50% center;
+    background-repeat: no-repeat;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("img/index-background-mobile@2x.jpg");
+      background-position: 50% center;
+    }
+    }
   .header-background__tablet-img {
     display: none;
   }
@@ -224,6 +231,10 @@ display: none;
     background-position: 210px -17px;
     background-repeat: no-repeat;
     background-size: 593px 700px;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("img/index-background-desktop@2x.jpg");
+      background-size: 1338px auto;
+    }
     }
 .header-background__headers {
   display: flex;
