Помогите с котами в слайдере на индексе и логотип в футере на индекс странице

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -3,10 +3,17 @@
 @desktop: 1220px;
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
+.additional-goods__hidden-header {
+  display: none;
+}
+.additional-goods__hidden-article-header {
+  display: none;
+}
 .additional-goods__header-sub-span {
   font-size: 24px;
   line-height: 24px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-weight: 400;
 }
 
 .additional-goods__header {
@@ -22,7 +29,7 @@
   justify-content: space-between;
   font-size: 14px;
   line-height: 14px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .additional-goods__article-order {
@@ -34,7 +41,7 @@
   background-color: #68b738;
   padding: 10px 108px 10px 111px;
   max-width: 280px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -46,7 +53,7 @@
 .additional-goods__green-background-text {
   font-size: 16px;
   line-height: 20px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   color: #ffffff;
   max-width: 160px;
   text-align: center;
@@ -89,7 +96,7 @@
   .additional-goods__article-header {
     font-size: 16px;
     line-height: 16px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     margin-bottom: 13px;
     text-transform: uppercase;
     margin-top: 14px;
@@ -215,7 +222,7 @@
   .additional-goods__green-background-text {
     font-size: 16px;
     line-height: 19px;
-    font-family: "Arial-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     color: #ffffff;
     max-width: 149px;
     margin-left: 278px;
