--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -38,7 +38,7 @@
 .right-logo__link-organization {
   font-size: 16px;
   line-height: 16px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   color: #444444;
   text-decoration: none;
   margin-right: 139px;
