--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -18,7 +18,7 @@
 .how-it-is-work__sub-text {
   font-size: 14px;
   line-height: 18px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   color: #444444;
   max-width: 191px;
 }
@@ -44,7 +44,7 @@
   .how-it-is-work__header {
     font-size: 36px;
     line-height: 60px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     color: #111111;
     margin-bottom: 28px;
   }
