--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -17,8 +17,7 @@
   font-size: 36px;
   line-height: 60px;
   color: #111111;
-  font-family: "Oswald-Regular", sans-serif;
-
+  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .main-catalog__good {
@@ -39,7 +38,7 @@
 .main-catalog__good-header {
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   color: #111111;
   max-width: 74px;
   text-transform: uppercase;
@@ -65,7 +64,7 @@
   justify-content: space-between;
   font-size: 12px;
   line-height: 16px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   margin-left: 1px;
   width: 100%;
 }
@@ -79,7 +78,7 @@
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   border: 0;
   color: #ffffff;
   padding: 11px 108px 9px 111px;
@@ -108,7 +107,7 @@
   .main-catalog__main-text {
     font-size: 36px;
     line-height: 60px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     padding-bottom: 2px;
     margin-top: 15px;
     margin-left: 22px;
@@ -124,12 +123,10 @@
   .main-catalog__main-text {
     font-size: 60px;
     line-height: 60px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     padding-bottom: 2px;
     margin-top: 42px;
     margin-left: 28px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     margin-bottom: 162px;
 }
@@ -168,7 +165,7 @@
 .main-catalog__good-header {
   font-size: 20px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   color: #111111;
   max-width: 135px;
   text-transform: uppercase;
@@ -252,7 +249,7 @@ margin: 0 auto;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   border: 0;
   color: #ffffff;
   padding: 10px 108px 11px 92px;
@@ -318,7 +315,7 @@ margin-right: 0;
 .main-catalog__good-header {
   font-size: 20px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   color: #111111;
   max-width: 135px;
   text-transform: uppercase;
