--- a/source/less/main-form.less
+++ b/source/less/main-form.less
@@ -12,7 +12,7 @@
 }
 
 .form__sub-label-input-radio {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
   color: #222222;
@@ -55,7 +55,7 @@
 }
 
 .form__contact-data-for-cat-owner {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   margin-right: 4px;
@@ -70,7 +70,7 @@
 }
 
 .form__sub-contact-cat-data {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
   color: #222222;
@@ -93,7 +93,7 @@
 
 .form__sub-input-text-email {
   border: 1px solid #e7e7e7;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
   padding: 13px 0 12px 15px;
@@ -104,7 +104,7 @@
 
 .form__sub-input-text-telephone {
   border: 1px solid #e7e7e7;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
   padding: 14px 50px 13px 15px;
@@ -113,7 +113,7 @@
 .form__submit-input {
   background-color: #68b738;
   border: 0;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
@@ -131,7 +131,7 @@
 }
 
 .form__required-fields-text {
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
@@ -143,7 +143,7 @@
 }
 
 .form__commentary-comment {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   margin-bottom: 36px;
@@ -161,7 +161,7 @@
 .form__commentary-textarea {
   font-size: 16px;
   line-height: 18px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   color: #444444;
   text-transform: uppercase;
   border: 1px solid #e6e6e6;
@@ -179,7 +179,7 @@
 .form__sub-add {
   font-size: 24px;
   line-height: 24px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   margin-right: 24px;
   padding-left: 20px;
 }
@@ -222,7 +222,7 @@
   font-size: 16px;
   max-width: 229px;
   line-height: 18px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   border: 1px solid #e6e6e6;
   padding: 13px 75px 12px 15px;
   margin-left: 16px;
@@ -236,7 +236,7 @@
 .form__sub-label-input-weight {
   font-size: 16px;
   line-height: 18px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   padding-top: 12px;
   padding-left: 15px;
   padding-bottom: 13px;
@@ -297,7 +297,7 @@
 
 @media (min-width:@mobile) {
   .main-form__full-anket {
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 14px;
     line-height: 18px;
     margin-bottom: 38px;
@@ -312,13 +312,13 @@
     margin-top: 14px;
     margin-left: 21px;
     margin-bottom: 27px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
   }
   .form__sub-label-age {
     margin-right: 14px;
   }
   .form__first-three-inputs {
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 14px;
     line-height: 18px;
     margin-bottom: 14px;
@@ -416,7 +416,7 @@
     margin-left: 10px;
   }
   .main-form__full-anket {
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 20px;
     line-height: 30px;
     margin-top: 27px;
@@ -437,7 +437,7 @@
   .form__sub-label-input-name {
     font-size: 20px;
     line-height: 18px;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     border: 1px solid #e6e6e6;
     padding: 11px 367px 9px 17px;
     margin-left: 19px;
@@ -511,7 +511,7 @@
     border-radius: 50%;
   }
   .form__sub-label-input-radio {
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
     color: #222222;
@@ -568,7 +568,7 @@
   }
   .form__sub-input-text-email {
     border: 1px solid #e7e7e7;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
     padding: 9px 159px 11px 20px;
@@ -600,7 +600,7 @@
   }
   .form__sub-input-text-telephone {
     border: 1px solid #e7e7e7;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
     padding: 9px 56px 11px 17px;
