--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -28,7 +28,7 @@
 }
 
 .communicating__address {
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   max-width: 135px;
   font-size: 14px;
   line-height: 20px;
@@ -40,7 +40,7 @@
   line-height: 20px;
   color: #111111;
   text-transform: uppercase;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   margin-right: 19px;
 }
 
@@ -85,11 +85,7 @@
 }
 
 .communicating__address-city {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
   justify-content: flex-end;
   margin-top: 20px;
 }
@@ -129,7 +125,7 @@
 
 
 .communicating__offer-communicating {
-  margin-top: 35px;
+  margin-top: 38px;
   font-size: 20px;
   line-height: 25px;
   margin-left: 75px;
