--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -20,7 +20,7 @@
 .find-all-goods__show-additional-goods {
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   text-transform: uppercase;
   margin-bottom: 7px;
   margin-left: 2px;
@@ -32,7 +32,7 @@
   background-color: #f2f2f2;
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   text-transform: uppercase;
   padding: 11px 94px 11px 95px;
   text-align: center;
@@ -42,7 +42,7 @@
 .find-all-goods__more-tastes {
   font-size: 12px;
   line-height: 16px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   margin-bottom: 21px;
 }
 
