--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -12,7 +12,7 @@
 }
 
 .live-example__header {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 36px;
   line-height: 60px;
   color: #111111;
@@ -22,7 +22,7 @@
 .live-example__sub {
   font-size: 14px;
   line-height: 18px;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   color: #444444;
   margin-bottom: 26px;
 }
@@ -51,26 +51,22 @@
 
 
 .live-example__numbers-sub-header {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
 }
 
-
-
 .live-example__numbers-sub-content {
   font-size: 12px;
   line-height: 12px;
   color: #444444;
-  font-family: "Arial-Regular", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   max-width: 55px;
   background-color: #f2f2f2;
   padding-left: 16px;
   padding-right: 18px;
 }
-
-
 
 .live-example__slider {
   padding-top: 37px;
@@ -81,7 +77,7 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .live-example__numbers-sub:first-child {
@@ -93,8 +89,6 @@
     align-items: center;
     width: 45.65%;
 }
-
-
 
 .live-example__slider {
   position: relative;
@@ -169,7 +163,7 @@
   }
   .live-example__price {
     text-transform: uppercase;
-    font-family: "Oswald-Regular", sans-serif;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 14px;
     line-height: 20px;
     text-align: center;
@@ -421,13 +415,13 @@
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 53px;
-  margin-left: 78px;
+  margin-left: 80px;
   max-width: 432px;
-  margin-top: 73px;
+  margin-top: 71px;
 }
 .live-example__numbers-plus-price {
     margin-top: 15px;
-    margin-left: 79px;
+    margin-left: 80px;
 }
 .live-example__numbers-sub:first-child {
   padding-top: 5px;
@@ -463,7 +457,7 @@
   justify-content: space-between;
   display: flex;
   flex-direction: row;
-  margin-top: 26px;
+  margin-top: 28px;
   padding-left:0;
 }
 .live-example__how-many-u-spent {
@@ -520,4 +514,13 @@
 .live-example__slider {
   padding-bottom: 18px;
 }
+
+/*Стилизация большого кота в слайдере индекс*/
+.live-example__slider {
+  position: relative;
+}
+.live-example__slider--slide {
+  position: absolute;
+}
+
 }
