--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -18,7 +18,7 @@
   line-height: 37.02px;
   margin-top: 7px;
   text-transform: uppercase;
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .programs__program:first-child {
@@ -41,7 +41,7 @@
 }
 
 .programs__program-link {
-  font-family: "Oswald-Regular", sans-serif;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
@@ -70,7 +70,7 @@
   .programs__program-content {
     font-size: 14px;
     line-height: 18px;
-    font-family: "Arial-Regular", sans-serif;
+    font-family: "Arial", "Tahoma", sans-serif;
     color: #444444;
     padding-bottom: 22px;
   }
