поправил ошибки с пикче

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -29,7 +29,7 @@
   justify-content: space-between;
   font-size: 14px;
   line-height: 14px;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
 }
 
 .additional-goods__article-order {
@@ -53,7 +53,7 @@
 .additional-goods__green-background-text {
   font-size: 16px;
   line-height: 20px;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   color: #ffffff;
   max-width: 160px;
   text-align: center;
@@ -65,7 +65,7 @@
   }
 
   .additional-goods__green-background {
-    margin-bottom: 35px;
+    margin-bottom: 36px;
     background-image: url("../img/gift-photo-mobile@1x.jpg");
     display: flex;
     flex-direction: column;
@@ -173,7 +173,8 @@
     margin-right: 52px;
   }
   .additional-goods__article-order {
-    max-width: 633px;
+    width: 89.66%;
+    max-width: 89.66%;
     margin-left: 36px;
     padding-right: 119px;
     padding-top: 10px;
@@ -222,7 +223,7 @@
   .additional-goods__green-background-text {
     font-size: 16px;
     line-height: 19px;
-    font-family: "Oswald-Regular", "Arial", sans-serif;
+    font-family: "Arial", "Tahoma", sans-serif;
     color: #ffffff;
     max-width: 149px;
     margin-left: 278px;
@@ -330,7 +331,7 @@
   }
   .additional-goods__article-order {
     max-width: 243px;
-    margin-left: 37px;
+    margin-left: 39px;
     padding-right: 119px;
     padding-top: 10px;
     padding-bottom: 8px;
@@ -395,7 +396,7 @@
     margin-top: 2px;
   }
   .additional-goods__header {
-    margin-top: 42px;
+    margin-top: 46px;
   }
   .additional-goods_header-line-tablet-show {
     display: block;
