--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -42,7 +42,7 @@
 .find-all-goods__more-tastes {
   font-size: 12px;
   line-height: 16px;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   margin-bottom: 21px;
 }
 
