--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -190,6 +190,14 @@ display: none;
     .header-background__work-for-your-cat {
       margin-bottom: 0;
     }
+    .header-background__img {
+      position: absolute;
+      left: 25px;
+      top: 241px;
+    }
+    .header-background {
+      position: relative;
+    }
     .check-your-program {
     margin-bottom: 507px;
     margin-top: 47px;
@@ -198,6 +206,7 @@ display: none;
     font-size: 20px;
     line-height: 20px;
     padding: 16px 28px 16px 26px;
+    z-index: 100;
     }
 }
 
@@ -275,6 +284,7 @@ display: none;
   position: absolute;
   top: 10px;
   right: 219px;
+  left:450px;
 }
 
 }
