--- a/source/less/main-form.less
+++ b/source/less/main-form.less
@@ -131,7 +131,7 @@
 }
 
 .form__required-fields-text {
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
@@ -1013,7 +1013,7 @@
     display: flex;
     margin-left: 0;
     padding-left: 0;
-    margin-top: 22px;
+    margin-top: 54px;
   }
   .form__checkbox-label::after {
     width: 38px;
@@ -1040,9 +1040,9 @@
     margin-right: 199px;
   }
   .form__submit {
-    margin-left: 1px;
+    margin-left: 2px;
     margin-top: 19px;
-    max-width: 870px;
+    max-width: 831px;
     margin-bottom: 61px;
   }
   .form__submit-input {
