--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -44,6 +44,9 @@
   text-transform: uppercase;
   margin-left: 1px;
 }
+.page-header__menu-main-sub-menu-elem-link--form {
+  color: #222222;
+  }
 
 .page-header__menu-main {
   text-align: center;
@@ -63,6 +66,10 @@
   .page-header__logo-site-image-mobile {
     display: block;
   }
+
+.page-header__menu-main-sub-menu-elem-link--form {
+color: #222222;
+}
 
   .page-header__logo-site-image-tablet {
     display: none;
@@ -105,6 +112,10 @@
     max-width: 708px;
     margin: 0 auto;
   }
+
+  .page-header__menu-main-sub-menu-elem-link--form {
+    color: #222222;
+    }
 
   .page-header__logo-site-image-mobile {
     display: none;
@@ -173,6 +184,10 @@
     padding-left: 0;
   }
 
+  .page-header__menu-main-sub-menu-elem-link--form {
+    color: #222222;
+    }
+
   .page-header__menu-main {
     margin-top: 7px;
   }
@@ -199,7 +214,9 @@
     line-height: 24.86px;
     color: #ffffff;
   }
-
+  .page-header__menu-main-sub-menu-elem-link--form{
+    color: #222222;
+  }
   .page-header__menu {
     justify-content: space-between;
   }
@@ -216,5 +233,10 @@
     border-bottom: 1px solid #ffffff;
     padding-bottom: 6px;
   }
-
+.page-header__menu-main-sub-menu-elem-link--catalog {
+  font-size: 20px;
+  line-height: 24.86px;
+  color: #111111;
 }
+}
+
