--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -66,7 +66,7 @@
   }
 
 .footer__social-links {
-  margin-bottom: 16px;
+  margin-bottom: 17px;
   margin-top: 22px;
   align-items: center;
   width: 127px;
@@ -87,7 +87,7 @@
 }
 
 .footer__logo-index {
-  padding-bottom: 27px;
+  padding-bottom: 29px;
 }
 
 .footer__logo-image {
@@ -102,7 +102,9 @@
 .footer__social-links-catalog {
   padding-bottom: 2px;
 }
-
+.footer__social-links-li:first-child {
+  margin-right: -7px;
+}
 }
 
 @media (min-width:@tablet){
@@ -207,5 +209,8 @@
 }
 .footer-logo-form {
   margin-top: 12px;
+}
+.footer__social-links-li {
+  margin-right: 7px;
 }
 }
